--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - ttys3_ci
     tags:
       - "[0-9]+.[0-9]+.[0-9]+"
   pull_request:
@@ -121,7 +122,6 @@ jobs:
             target/${{ matrix.target }}/release/ouch
             target/${{ matrix.target }}/release/ouch.exe
             artifacts/
-
 
   clippy-rustfmt:
     name: clippy-rustfmt
